# TransferHub

./: README.md  description  pyproject.toml
myapp/app/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
myapp/app/migrations/: 0001_initial.py  0002_alter_contract_contract_id_and_more.py  0002_remove_contract_player_alter_contract_contract_id.py  0003_alter_contract_contract_id_alter_country_country_id.py  0004_alter_contract_contract_id_alter_contract_start_date_and_more.py  0005_alter_contract_contract_id_alter_transfer_from_club.py  0006_alter_contract_contract_id_and_more.py  0007_alter_contract_contract_id.py  0008_alter_contract_contract_id_and_more.py  0009_alter_contract_contract_id_and_more.py  0010_alter_contract_contract_id_and_more.py
myapp/app/static/css/: profile.css  style.css
myapp/app/static/js/: scripts.js
myapp/app/templates/app/: base.html  delete.html  index.html  login.html  permission_denied.html  profile.html  register.html  update_form.html
myapp/myapp/: settings.py  urls.py
