[tool.poetry]
name = "transferhub"
version = "0.1.0"
description = ""
authors = ["Алексей <alexey.maltsev02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
